tests/errors/division-by-zero.chef
Division By Zero Test.

This recipe tries to divide by an ingredient with value zero.

Ingredients.
10 g numerator
0 g denominator

Method.
Put numerator into mixing bowl.
Divide denominator into mixing bowl.

Serves 1.
